# imitrob_project

./: README.md  requirements.txt
crow/: README.md
crow/asr/: CMakeLists.txt  package.xml
crow/asr/launch/: asr.launch
crow/asr/nodes/: CloudStream.py  SpeechStream.py  __init__.py  asr_client.py
crow/asr/srv/: SpeechReco.srv
crow/database_com/: CMakeLists.txt  package.xml
crow/database_com/msg/: DBOperation.msg  DatabaseUpdate.msg  MetaResponse.msg
crow/database_com/nodes/: saved_onto.owl  update_database_node.py
crow/database_com/srv/: AddObject.srv  GetDatabase.srv  GroundProgram.srv  SendDatabase.srv
crow/database_com/tests/: test_db_node.py
crow/ontology/: onto_draft_01.owl
crow_executor/: CMakeLists.txt  package.xml
crow_executor/nodes/: execute_program_node.py
crow_executor/src/: ProgramExecutor.py
crow_nlp/: CMakeLists.txt  package.xml  setup.py
crow_nlp/msg/: SentenceProgram.msg
crow_nlp/scripts/: nl_input_node.py  nl_input_node_asr.py  nlp_node.py  saved_updated_onto.owl  test_grammar.py
crow_nlp/src/nlp_crow/config/: config.ini  logging.ini
crow_nlp/src/nlp_crow/database/: Database.py  DatabaseAPI.py  Ontology.py
crow_vision/object_detection_aruco/: CMakeLists.txt  README.md  package.xml  setup.py
crow_vision/object_detection_aruco/launch/: detect_aruco_pose.launch
crow_vision/object_detection_aruco/msg/: MarkersAvg.msg  MarkersAvgList.msg
crow_vision/object_detection_aruco/scripts/: ArUco.cfg  demo_aruco_markermap_realsense.launch  demo_aruco_markermap_webcam.launch  detecting_aruco_pose.py  karla_test.py
(+37 files in other folders)
