<?xml version="2.0"?>
<package format="2">
  <name>asr</name>
  <version>1.0.0</version>
  <description>
    ROS package for pocketsphinx speech recognizer
  </description>
  <author>Gabriela Sejnova</author>
  <maintainer email="g.sejnova@gmail.com">Gabriela Sejnova</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend><!-- only needed for demos -->

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  

</package>
